syntax = "proto3";

package api.liveclass;

option go_package = "api/hello;hello";

message SayHelloRequest {
	repeated string names = 1;
}

// 定义hello消息tit
message HelloItem {
	string word = 1;
	string title = 2;
}

message SayHelloResponse {
	HelloItem hello = 1;
}

service Hello {
	/* 生成教研活动报告定时任务调用 */
	rpc SayHello (SayHelloRequest) returns (SayHelloResponse);
}
