syntax = "proto3";

package api.liveclass;

option go_package = "api/liveclass;liveclass";
option java_multiple_files = true;
option java_package = "api.liveclass";

message LiveClassCallBackRequest {
		bytes  Data=1;
}

message LiveClassCallBackReply {
	string success = 1;
}

message LiveClassDelayRequest {
	string meetingId = 1;
	int64 delayDuration = 2;
}

message LiveClassDelayReply {
	string success = 1;
}

message LiveClassBeginRequest {
	string meetingId = 1;
}

message LiveClassBeginReply {
	string success = 1;
}

message LiveClassEndRequest {
	string meetingId = 1;
}

message LiveClassEndReply {
	string success = 1;
}

enum LiveClassCallBackEvent {
	Unknown = 0;
	//说课结束(针对说课教研会议)
	SpeakClassEnd = 1;
	//直播开始
	LiveBegin= 2;
	//直播结束
	LiveEnd= 3;
}

message LiveClassCommonCallBackRequest {
	string meetingId = 1;
	LiveClassCallBackEvent Event = 2;
	bytes  Data = 3;
}

message LiveClassCommonCallBackReply {
	string success = 1;
}

message InviteGroupRequest {
	repeated int64 groupIds = 1;
	string meetingId = 2;
}

message InviteGroupReply {
	string success = 1;

}

message	GetTeachingUserRequest{
	string meetingId = 1;
}

message	GetTeachingUserReply{
	bytes data = 1;
}

message UpdateInfiMeetingMemberRequest {
	int64 id = 1; // 备课组ID
}

message UpdateInfiMeetingMemberReply {
	string success = 1;
}

message GetUserTypeInTeachingActivityRequest {
	string teachingActivityId = 1;
	int64 userId = 2;
}

message GetUserTypeInTeachingActivityReply {
	string userType = 1;
}

message VideoTranscodeStatusRequest {
	string fileId = 1;
	int64 status = 2;
}

message VideoTranscodeStatusRequestReply {
	string success = 1;
}

message GenTrReportRequest{
	string TeachingActivityId = 1;
}

message GenTrReportResponse{
	bool success = 1;
}

message LiveClassRelatedGroupRequest {
	int64 relatedGroupId = 1;
}

// 定义RelatedGroup消息
message RelatedLiveClass {
	string meetingId = 1;
	string inviterName = 2;
	string title = 3;
}

message LiveClassRelatedGroupResponse {
	repeated RelatedLiveClass relatedLiveClass = 1;
}

service LiveClass {
	/*实时课堂通用回调*/
	rpc LiveClassCommonCallBack (LiveClassCommonCallBackRequest) returns (LiveClassCommonCallBackReply);
	/** 历史课堂回调 */
	rpc LiveClassCallBack (LiveClassCallBackRequest) returns (LiveClassCallBackReply);
	/** 课堂延时 */
	rpc LiveClassDelay (LiveClassDelayRequest) returns (LiveClassDelayReply);
	/** 课堂开始 */
	rpc LiveClassBegin (LiveClassBeginRequest) returns (LiveClassBeginReply);
	/** 课堂结束 */
	rpc LiveClassEnd (LiveClassEndRequest) returns (LiveClassEndReply);
	/*联播班级邀请*/
	rpc InviteGroup (InviteGroupRequest) returns (InviteGroupReply);
	/*获取教研活动人员 */
	rpc GetTeachingUser (GetTeachingUserRequest) returns (GetTeachingUserReply);

	/*视频转码成功回调*/
	rpc VideoTranscodeStatus (VideoTranscodeStatusRequest) returns (VideoTranscodeStatusRequestReply);

	/* 生成教研活动报告定时任务调用 */
	rpc GenTrReport (GenTrReportRequest) returns (GenTrReportResponse);

	/* 生成教研活动报告定时任务调用 */
	rpc LiveClassRelatedGroup (LiveClassRelatedGroupRequest) returns (LiveClassRelatedGroupResponse);
}
